--- a/src/sass/header/_header.scss
+++ b/src/sass/header/_header.scss
@@ -122,7 +122,7 @@ body {
   height: 100%;
   color: transparent;
   user-select: none;
-  background-color: white;
+  background-color: #333;
   border-radius: inherit;
   z-index: 1;
   cursor: pointer;
@@ -142,7 +142,7 @@ body {
 }
 
 .theme-switch__toggle:checked + .theme-switch__track {
-  background-color: #333;
+  background-color: white;
 }
 
 .theme-switch__toggle:checked ~ .theme-switch__marker {
@@ -155,6 +155,9 @@ body {
 }
 
 .header-my-favorites-btn {
+  position: absolute;
+  top: 0px;
+  right: 10px;
   margin-right: 20px;
   border: 0;
   border-radius: 20px;
@@ -185,6 +188,12 @@ body {
   .theme-switch__track,
   .theme-switch__marker {
     left: 25px;
+    top: 10px;
+  }
+
+  .header-my-favorites-btn {
+    top: 10px;
+    right: -40px;
   }
 
   @media screen and (min-device-pixel-ratio: 2),
@@ -211,6 +220,17 @@ body {
     height: 26px;
     width: 112px;
     font-size: 14px;
+    top: 10px;
+  }
+
+  .theme-switch__track,
+  .theme-switch__marker {
+    top: 8px;
+  }
+
+  .moon,
+  .sun {
+    top: 12px;
   }
 
   // .theme-switch__control {
