--- a/src/sass/modul-window-card/_modul-window-card.scss
+++ b/src/sass/modul-window-card/_modul-window-card.scss
@@ -27,21 +27,29 @@ body.modal-open {
 
 .modal-box {
   @media screen and (max-width: 319px) {
+    transform: translate(-50%, -50%) scale(0.7, 0.8);
+
     width: 272px;
     min-height: auto;
     border-radius: 150px 0 150px 0;
   }
   @media screen and (min-width: 320px) {
+    transform: translate(-50%, -50%) scale(0.8,0.7);
+
     width: 272px;
     min-height: auto;
     border-radius: 150px 0 150px 0;
   }
   @media screen and (min-width: 595px) {
+    transform: translate(-50%, -50%) scale(0.7);
+
     width: 595px;
     min-height: auto;
     border-radius: 300px 0 300px 0;
   }
   @media screen and (min-width: 1050px) {
+    transform: translate(-50%, -50%) scale(0.6);
+
     width: 942px;
     min-height: auto;
 
@@ -50,7 +58,7 @@ body.modal-open {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%) scale(0.6);
+
   transition: transform 250ms linear;
   background-color: rgba(255, 242, 253, 1);
 }
